<resources>
    <string name="app_name">Wedding Camera</string>

    <string name="default_description">Default description</string>

    <string name="text_1">Выберите место съёмки своей мечты</string>
    <string name="text_2">Скажите нам что-нибудь приятное на камеру</string>

    <string name="done_1">Выбрали</string>
    <string name="done_2">Сказать</string>

    <string name="success_dialog_title">Вы прекрасны!</string>
    <string name="success_dialog_message">Пожалуйста, верните чудо-телефон на место, чтобы другие гости тоже могли им воспользоваться</string>

    <string name="secret_dialog_title">Поздравляем!</string>
    <string name="secret_dialog_message">Вы нашли секретик! Узнайте у молодожёнов или координатора, что вам за это полагается :)\nP.S. И больше никому об этом не рассказывайте!</string>

    <string name="hash_tag">#1508toINF</string>
</resources>
