<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue_light"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/second_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:contentDescription="@string/default_description" />

    <View
        android:layout_width="match_parent"
        android:layout_height="8dp"
        android:background="@drawable/gradient" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/text_2"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size"
        android:textStyle="bold" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <Button
            android:id="@+id/second_button"
            android:layout_width="@dimen/circle_size"
            android:layout_height="@dimen/circle_size"
            android:layout_gravity="center"
            android:background="@drawable/circle_white_ripple"
            android:text="@string/done_2"
            android:textColor="@color/blue_light"
            android:textSize="@dimen/text_size" />

    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="@dimen/default_padding"
        android:text="@string/hash_tag"
        android:textColor="@color/white"
        android:textSize="@dimen/hash_tag_size" />

</LinearLayout>