<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/blue_light"
    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/success_dialog_secret_man"
            android:layout_width="@dimen/secret_width"
            android:layout_height="@dimen/secret_height"
            android:layout_margin="@dimen/default_padding"
            android:adjustViewBounds="true"
            android:contentDescription="@string/default_description"
            android:src="@drawable/minion_man"
            android:visibility="gone" />

        <TextView
            android:id="@+id/success_dialog_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/default_padding"
            android:layout_marginTop="@dimen/default_padding"
            android:text="@string/success_dialog_title"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size" />

        <ImageView
            android:id="@+id/success_dialog_secret_woman"
            android:layout_width="@dimen/secret_width"
            android:layout_height="@dimen/secret_height"
            android:layout_margin="@dimen/default_padding"
            android:adjustViewBounds="true"
            android:contentDescription="@string/default_description"
            android:src="@drawable/minion_woman"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/success_dialog_secret"
            android:layout_width="@dimen/secret_width_big"
            android:layout_height="@dimen/secret_height_big"
            android:layout_marginBottom="6dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/default_description" />

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/success_dialog_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:contentDescription="@string/default_description" />


    </FrameLayout>

    <TextView
        android:id="@+id/success_dialog_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/default_padding"
        android:text="@string/success_dialog_message"
        android:textColor="@color/white" />

</LinearLayout>